src/views/Player/Player.css
.PlayerContainer {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(
      to bottom left,
      rgba(0, 0, 0, 0.2),
      rgba(0, 0, 0, 0.4)
    ),
    var(--current-song-color);
  transition: top 0.1s ease-in, bottom 0.1s ease-in, left 0.1s ease-in,
    right 0.1s ease-in, background 0.5s;
  height: 100svh;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.smallPlayer {
  justify-self: center;
  top: 85vh;
  bottom: 20px;
  left: 15px;
  right: 15px;
  height: fit-content;
  flex-direction: row;
  border-radius: 8px;
  border: 1px solid var(--current-song-color);
  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    var(--current-song-color);
  width: 90vw;
}

.mobileWidthControl {
  max-width: var(--max-player-width-mobile);
  display: flex;
  flex-direction: column;
  width: 100%;
  padding-inline: 20px;
  height: 100svh;
  justify-content: space-evenly;
  position: relative;
}
.smallPlayer .mobileWidthControl {
  padding: unset;
  flex-direction: row;
  align-items: center;
  height: unset;
  justify-content: space-between;
  max-width: unset;
}

.topControlsContainer {
  display: flex;
  padding-block: 30px 50px;
  justify-content: space-between;
}
.smallPlayer .topControlsContainer {
  display: none;
}

.queueContainer {
  z-index: 2;
  background: red;
  position: absolute;
  width: calc(100% - 40px);
  top: 70px;
  bottom: 0;
}

.controlsContainer {
  display: flex;
  gap: 5px;
  align-items: center;
  cursor: pointer;
}
.controlsContainer > img {
  height: 13px;
}

.albumArtContainer {
  aspect-ratio: 1;
  position: relative;
  overflow: hidden;
  height: 50%;
}
.albumArt {
  position: absolute;
  border-radius: 5px;
  width: 100%;
  background: var(--current-song-color);
  object-fit: cover;
  aspect-ratio: 1;
  opacity: 1;
  transition: opacity 1s;
  transition: transform 0.2s;
  z-index: 1;
}
.albumArtHidden {
  opacity: 0;
}
.tiltAlbumArt {
  transform: perspective(1500px) rotateY(25deg) scale(0.95) translateX(-15px);
}
.smallPlayer .tiltAlbumArt {
  transform: unset;
  transition: transform 0s;
}

.doubleTapOverlay {
  position: absolute;
  width: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)),
    var(--current-song-color);
  border-radius: 100%;
  opacity: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  aspect-ratio: 1;
  z-index: 1;
}
.leftDoubleTapOverlay {
  right: 60%;
  justify-content: center;
  padding-left: 60%;
}
.rightDoubleTapOverlay {
  left: 60%;
  justify-content: center;
  padding-right: 60%;
}
.rightDoubleTapOverlay > img {
  rotate: 180deg;
}
.doubleTabOverlayAnimation {
  animation: doubleTapOverlayKeyframes 2s;
}

@keyframes doubleTapOverlayKeyframes {
  from {
    opacity: 0.7;
  }

  to {
    opacity: 0;
  }
}

.smallPlayer .doubleTapOverlay {
  display: none;
}

.smallPlayer .albumArtContainer {
  width: 45px;
  height: 45px;
  position: relative;
  bottom: 8px;
  left: 8px;
  border-radius: 5px;
  overflow: unset;
}

.extraControlsContainer {
  display: flex;
  flex-direction: column;
  position: absolute;
  right: 0;
  height: 100%;
  justify-content: center;
  max-width: 55px;
  gap: 20px;
  opacity: 0;
  transition: opacity 1s;
  pointer-events: none;
}
.extraControlsContainer > img {
  padding-block: 10px;
  padding-left: 10px;
  cursor: pointer;
  z-index: 2;
}
.visibleControls {
  opacity: 1;
  pointer-events: unset;
}
.smallPlayer .extraControlsContainer {
  display: none;
}

.songName {
  margin: 0;
  font-weight: 600;
  font-size: 1.3rem;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  height: 3.5rem;
  margin-block: 10px;
  line-break: anywhere;
}

.smallPlayer .songName {
  font-size: 1rem;
  margin: 0;
  height: 1.3rem;
  -webkit-line-clamp: 1;
  margin-left: 15px;
  width: 100%;
  text-align: center;
}

.queueContainer {
  z-index: 2;
  background: var(--current-song-color);
  position: absolute;
  width: calc(100% - 40px);
  bottom: 0;
  border-radius: 5px 5px 0 0;
  transition: all 0.2s;
  opacity: 0;
  top: 100svh;
}
.queueVisible {
  opacity: 1;
  top: 98.5px;
}

.smallPlayer .queueContainer {
  display: none;
}

.artistAlbumContainer {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  margin-block: 20px 10px;
}
.artistAlbumContainer > p {
  text-wrap: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-size: 0.8rem;
}
.smallPlayer .artistAlbumContainer {
  display: none;
}

.timeline {
  appearance: none;
  width: 99%;
  cursor: pointer;
  outline: none;
  overflow: hidden;
  border-radius: 8px;
  height: var(--player-timeline-thickness);
}

.timeline::-moz-range-track {
  height: var(--player-timeline-thickness);
  background: #ffffff;
  border-radius: 8px;
}

.timeline::-moz-range-thumb {
  width: 0px;
  height: 0px;
  box-shadow: -399px 0 0 400px var(--current-song-color);
  border: none;
}

.timeline::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: none;
  height: 0;
  width: 0;
  box-shadow: -399px 0 0 400px var(--current-song-color);
}

.smallPlayer .timeline {
  display: none;
}

.elapsedTimeContainer {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  margin-block: 5px 10px;
}
.elapsedTimeContainer > p {
  text-wrap: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-size: 0.8rem;
}
.smallPlayer .elapsedTimeContainer {
  display: none;
}

.playbackControlsContainer {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
  width: 100%;
  margin-bottom: 40px;
}
.playbackControlsContainer > div {
  border-radius: 8px;
  border: 1px solid var(--current-song-color);
  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    var(--current-song-color);
  transition: background 0.6s;
  padding-block: 30px;
  display: flex;
  justify-content: center;
  cursor: pointer;
}
.smallPlayer .playbackControlsContainer {
  margin: 0;
  width: unset;
  display: unset;
  padding-inline: 15px;
  display: flex;
}
.smallPlayer .playbackControlsContainer > :not(.miniPlayerControlButton) {
  display: none;
}
.smallPlayer .miniPlayerControlButton {
  padding: 15px 10px;
  border: unset;
}

